@@ -106,13 +106,14 @@ public class ExerciseService {
                         entity.getExerciseId(),
                         entity.getName(),
                         entity.getImageUrl(),
-                        entity.getBodyPart()
+                        entity.getBodyPart(),
+                        entity.getDifficulty()
                 ))
                 .toList();
 
         // 6. nextCursor 계산
         Long nextCursor = hasNext && !resultEntities.isEmpty()
-                ? resultEntities.get(resultEntities.size() - 1).getExerciseId()
+                ? resultEntities.getLast().getExerciseId()
                 : null;
 
         return new ExerciseListResponseDTO(items, nextCursor, hasNext);
